--- a/static/404.html
+++ b/static/404.html
@@ -3,94 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>404 - URL Not Found</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-
-      body {
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-          Oxygen, Ubuntu, Cantarell, sans-serif;
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        min-height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 20px;
-      }
-
-      .container {
-        background: white;
-        border-radius: 20px;
-        padding: 40px;
-        box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
-        max-width: 500px;
-        width: 100%;
-        text-align: center;
-      }
-
-      .error-code {
-        font-size: 8em;
-        font-weight: 300;
-        color: #667eea;
-        margin-bottom: 20px;
-        line-height: 1;
-      }
-
-      h1 {
-        color: #333;
-        margin-bottom: 20px;
-        font-size: 2em;
-        font-weight: 300;
-      }
-
-      p {
-        color: #666;
-        margin-bottom: 30px;
-        font-size: 1.1em;
-        line-height: 1.6;
-      }
-
-      .home-btn {
-        display: inline-block;
-        padding: 15px 30px;
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        color: white;
-        text-decoration: none;
-        border-radius: 10px;
-        font-size: 16px;
-        font-weight: 600;
-        transition: all 0.3s ease;
-      }
-
-      .home-btn:hover {
-        transform: translateY(-2px);
-        box-shadow: 0 10px 20px rgba(102, 126, 234, 0.3);
-      }
-
-      .emoji {
-        font-size: 4em;
-        margin-bottom: 20px;
-        display: block;
-      }
-
-      @media (max-width: 600px) {
-        .container {
-          padding: 30px 20px;
-        }
-
-        .error-code {
-          font-size: 5em;
-        }
-
-        h1 {
-          font-size: 1.5em;
-        }
-      }
-    </style>
+    <title>URL Not Found</title>
+    <link rel="stylesheet" href="static/style.css?v=1" />
   </head>
   <body>
     <div class="container">
